--- a/views/index.erb
+++ b/views/index.erb
@@ -1,6 +1,7 @@
-<h2>Our Candies</h2>
+<!-- список конфеток на главной-->
+<h3>Our Candies</h3>
 <br/>
-<% @candies.each do |c| %>
+<% $candies.each do |c| %>
 	<p>
 	<%= c.candyname %>
 	</p>
