--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,15 +1,26 @@
 <!DOCTYPE html>
 <html>
 	<head>
+
 		<!-- заголовок сайта -->
-		<title>Site</title>
+		<title>Candy Shop II</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+		 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) (CDN)-->
+	    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
+
 		<!-- подключаем Bootstrap через CDN -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 
- 		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) (CDN)-->
-	    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
+		<!-- Подключаем плагин datetimepicker -->
+	    <link rel="stylesheet" type="text/css" href="/Plugin/jquery.datetimepicker.css">
+	    <script src="/Plugin/jquery.datetimepicker.full.min.js"></script>
+
+		<!-- Подключаем плагин colorpicker -->
+		<script src="/Plugin/jquery.simplecolorpicker.js"></script>
+		<link rel="stylesheet" href="/Plugin/jquery.simplecolorpicker.css">
+  		<link rel="stylesheet" href="/Plugin/jquery.simplecolorpicker-glyphicons.css">
 
 	</head>
 	<body>
@@ -24,11 +35,11 @@
 			      <span class="icon-bar"></span>
 			      <span class="icon-bar"></span>
 			    </button>
-			    <a class="navbar-brand" href="/">Site</a>
+			    <a class="navbar-brand" href="/">Candy Shop II</a>
 			  </div>
 			  <div class="navbar-collapse collapse">
 			    <ul class="nav navbar-nav">
-			      <li><a href="/one">One</a></li>
+			      <li><a href="/visit">Visit</a></li>
 			      <li><a href="/two">Two</a></li>
 			      <li><a href="/three">Three</a></li>
 			    </ul>
