--- a/views/layout.erb
+++ b/views/layout.erb
@@ -40,7 +40,7 @@
 			  <div class="navbar-collapse collapse">
 			    <ul class="nav navbar-nav">
 			      <li><a href="/visit">Visit</a></li>
-			      <li><a href="/two">Two</a></li>
+			      <li><a href="/contacts">Contacts</a></li>
 			      <li><a href="/three">Three</a></li>
 			    </ul>
 			  </div> <!--/.nav-collapse -->
