new method for save data

--- a/views/contacts.erb
+++ b/views/contacts.erb
@@ -8,13 +8,13 @@
   <!-- адрес отправителя -->  		
   <div class="form-group">
     <label>Your email</label>
-    <input name = "email" type="email" class="form-control" placeholder="email" required value=<%= @email %>>
+    <input name = "aaa[email]" type="email" class="form-control" placeholder="email" required value="">
   </div>
 
   <!-- сообщение -->
   <div class="form-group">
   	<label>Message</label>
-  	<textarea name = "message" class="form-control" rows="3" required><%= @message %></textarea>
+  	<textarea name = "aaa[message]" class="form-control" rows="3" required></textarea>
   </div>
 
   <!-- отправка формы --> 
