validation for contacts

--- a/views/visit.erb
+++ b/views/visit.erb
@@ -19,19 +19,19 @@
   <!-- Имя -->
   <div class="form-group">
     <label>Your name</label>
-    <input name = "aaa[name]" type="text" class="form-control" placeholder="Name" required value="">
+    <input name = "aaa[name]" type="text" class="form-control" placeholder="Name" value="">
   </div>
 
   <!-- Телефон -->
   <div class="form-group">
     <label>Phone</label>
-    <input name = "aaa[phone]" type="text" class="form-control" placeholder="Phone" required value="">
+    <input name = "aaa[phone]" type="text" class="form-control" placeholder="Phone" value="">
   </div>
 
   <!-- время визита -->
   <div class="form-group">
       <label>Data and Time</label>
-      <input name = "aaa[date]" id='datetimepicker' type="text" class="form-control" placeholder="Data and Time" required value="">
+      <input name = "aaa[date]" id='datetimepicker' type="text" class="form-control" placeholder="Data and Time" value="">
   </div>
 
   <!-- К кому -->
