--- a/views/layout.erb
+++ b/views/layout.erb
@@ -41,7 +41,7 @@
 			    <ul class="nav navbar-nav">
 			      <li><a href="/visit">Visit</a></li>
 			      <li><a href="/contacts">Contacts</a></li>
-			      <li><a href="/three">Three</a></li>
+			      <li><a href="/visitlist">List of visits</a></li>
 			    </ul>
 			  </div> <!--/.nav-collapse -->
 			</nav>
